WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287635
REGRESSION (
290068@main
): Top of web view in Safari is hidden when opening a new tab via link
https://bugs.webkit.org/show_bug.cgi?id=287635
Summary
REGRESSION (290068@main): Top of web view in Safari is hidden when opening a ...
Wenson Hsieh
Reported
2025-02-13 09:06:06 PST
rdar://144742838
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2025-02-13 09:12:07 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40559
EWS
Comment 2
2025-02-13 14:24:38 PST
Committed
290366@main
(d00395b73a5a): <
https://commits.webkit.org/290366@main
> Reviewed commits have been landed. Closing PR #40559 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug