REGRESSION (290068@main): Top of web view in Safari is hidden when opening a new tab via link https://bugs.webkit.org/show_bug.cgi?id=287635 rdar://144742838

Reviewed by Simon Fraser and Abrar Rahman Protyasha.

In 290068@main, I'd unintentionally changed the behavior of `WebViewImpl::obscuredContentInsets()`,
such that it no longer returns the pending obscured content insets (formerly, only the top content
inset) in the case where the client is setting the top content inset asynchronously. Fix this by
restoring the old behavior, by replacing: the return value `m_page->obscuredContentInsets()` with
`m_page->pendingOrActualObscuredContentInsets();`.

* Source/WebCore/page/scrolling/ScrollingStateNode.h:

Drive-by fix: realign the leading whitespace before this enum value.

* Source/WebKit/UIProcess/mac/WebViewImpl.mm:
(WebKit::WebViewImpl::obscuredContentInsets const):

See above.

* Tools/TestWebKitAPI/SourcesCocoa.txt:
* Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/ObscuredContentInsets.mm: Renamed from Tools/TestWebKitAPI/Tests/WebKitCocoa/TopContentInset.mm.
(-[FullscreenChangeMessageHandler userContentController:didReceiveScriptMessage:]):
(TestWebKitAPI::TEST(TopContentInset, Fullscreen)):
(TestWebKitAPI::TEST(TopContentInset, AutomaticAdjustment)):
(TestWebKitAPI::TEST(TopContentInset, AutomaticAdjustmentDisabled)):
(TestWebKitAPI::TEST(TopContentInset, AutomaticAdjustmentDoesNotAffectInsetViews)):
(TestWebKitAPI::TEST(ObscuredContentInsets, SetAndGetObscuredContentInsets)):

Rename `TopContentInset.mm` to `ObscuredContentInsets.mm`, and add a new API test.

Canonical link: https://commits.webkit.org/290366@main