Source/WebCore/page/scrolling/ScrollingStateNode.h
@@ -241,7 +241,7 @@ enum class ScrollingStateNodeProperty : uint64_t {
     HeaderLayer                                 = 1LLU << 50, // Not serialized
     FooterLayer                                 = 1LLU << 43, // Not serialized
     BehaviorForFixedElements                    = FooterHeight << 1,
-    ObscuredContentInsets                               = BehaviorForFixedElements << 1,
+    ObscuredContentInsets                       = BehaviorForFixedElements << 1,
     VisualViewportIsSmallerThanLayoutViewport   = ObscuredContentInsets << 1,
     AsyncFrameOrOverflowScrollingEnabled        = VisualViewportIsSmallerThanLayoutViewport << 1,
     WheelEventGesturesBecomeNonBlocking         = AsyncFrameOrOverflowScrollingEnabled << 1,
